--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-aiohttp
-aiofiles
-aioshutil
 anytree
-apscheduler
-git+https://github.com/rajanvibes/required01
 asyncio
 beautifulsoup4
+bencoding
 cfscrape
 dnspython
 feedparser
@@ -15,22 +11,21 @@ google-auth-httplib2
 google-auth-oauthlib
 gunicorn
 git+https://github.com/zevtyardt/lk21.git
-httpx
 lxml
-motor
-natsort
 pillow
 psutil
 pybase64
 pymongo
-pyrogram
+pyrogram==2.0.66
 python-dotenv
 python-magic
-https://github.com/rajanvibes/required02
+python-telegram-bot==13.15
 requests
 telegraph
 tenacity
-tgcrypto
-uvloop
+tgCrypto
 xattr
-git+https://github.com/rajanvibes/required03
+git+https://github.com/ali-mmagneto/gerek04
+git+https://github.com/ali-mmagneto/gerek03
+git+https://github.com/ali-mmagneto/gerek02
+git+https://github.com/ali-mmagneto/gerek01
