--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aiohttp
+aiofiles
+aioshutil
 anytree
+apscheduler
+aria2p
 asyncio
 beautifulsoup4
-bencoding
 cfscrape
 dnspython
 feedparser
@@ -11,21 +15,22 @@ google-auth-httplib2
 google-auth-oauthlib
 gunicorn
 git+https://github.com/zevtyardt/lk21.git
+httpx
 lxml
+motor
+natsort
 pillow
 psutil
 pybase64
 pymongo
-pyrogram==2.0.66
+pyrogram
 python-dotenv
 python-magic
-python-telegram-bot==13.15
+qbittorrent-api
 requests
 telegraph
 tenacity
-tgCrypto
+tgcrypto
+uvloop
 xattr
-git+https://github.com/ali-mmagneto/gerek04
-git+https://github.com/ali-mmagneto/gerek03
-git+https://github.com/ali-mmagneto/gerek02
-git+https://github.com/ali-mmagneto/gerek01
+yt-dlp
