--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp
-aiofiles
+git+https://github.com/newreposs/onem5
+git+https://github.com/newreposs/onem6
 aioshutil
 anytree
 apscheduler
-aria2p
+git+https://github.com/newreposs/onem1
 asyncio
 beautifulsoup4
 cfscrape
@@ -26,11 +26,11 @@ pymongo
 pyrogram
 python-dotenv
 python-magic
-qbittorrent-api
+git+https://github.com/newreposs/onem4
 requests
 telegraph
 tenacity
 tgcrypto
 uvloop
 xattr
-yt-dlp
+git+https://github.com/newreposs/onem2
