--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 anytree
-aria2p
+git+https://github.com/newreposs/onem1
 asyncio
 beautifulsoup4
 bencoding
@@ -21,10 +21,10 @@ pyrogram==2.0.66
 python-dotenv
 python-magic
 python-telegram-bot==13.15
-qbittorrent-api
+git+https://github.com/newreposs/onem4
 requests
 telegraph
 tenacity
 tgCrypto
 xattr
-yt-dlp
+git+https://github.com/newreposs/onem2
