--- a/config.env
+++ b/config.env
@@ -11,11 +11,11 @@ DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it 
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001420105593/13001"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
-STATUS_LIMIT = ""
+STATUS_LIMIT = "4"
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
 UPTOBOX_TOKEN = "0666becce8a51cf4e5d373cc9bd687b946u9c"
