--- a/config.env
+++ b/config.env
@@ -11,11 +11,11 @@ DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it 
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = "-1001420105593/13001"                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+SUDO_USERS = "5307857865 5514613919 342961418 819522914 1294441432 1283445630"                             # Require restart after changing it while bot running
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
-STATUS_LIMIT = "4"
+STATUS_LIMIT = "2"
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
 UPTOBOX_TOKEN = "0666becce8a51cf4e5d373cc9bd687b946u9c"
@@ -33,15 +33,15 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 MEDIA_GROUP = ""
 LEECH_FILENAME_PERFIX = ""
-DUMP_CHAT = "-1001623191721"
+DUMP_CHAT = "-1001831477281"
 # qBittorrent/Aria2c
 BASE_URL = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
 #Queueing system
-QUEUE_ALL = ""
-QUEUE_DOWNLOAD = ""
-QUEUE_UPLOAD = ""
+QUEUE_ALL = "2"
+QUEUE_DOWNLOAD = "2"
+QUEUE_UPLOAD = "2"
 # RSS
 RSS_DELAY = ""
 RSS_CHAT_ID = ""
