--- a/config.env
+++ b/config.env
@@ -12,7 +12,7 @@ STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = "5307857865 5514613919 342961418 819522914 1294441432 1283445630 1674115881"                             # Require restart after changing it while bot running
+SUDO_USERS = "1463799011 5307857865 5514613919 342961418 819522914 1294441432 1283445630 1674115881"                             # Require restart after changing it while bot running
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
 STATUS_LIMIT = "2"
